--- a/model/Dockerfile
+++ b/model/Dockerfile
@@ -1,4 +1,6 @@
-FROM eu.gcr.io/ml-mva/dependencies:1.7.1
+FROM eu.gcr.io/ml-mva/dependencies:1.6
 RUN mkdir /app/
 COPY . /app/
+WORKDIR /app/
+ENV PYTHONUNBUFFERED 1
 CMD ["python", "workflow.py"]
